--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <title>HTML/CSS Lab</title>
     <link rel="stylesheet" href="https://unpkg.com/basscss@8.0.1/css/basscss.min.css">
     <style>
-
     </style>
   </head>
   <body>
-
+    <div style="width: 600px" class="mx-auto">
+      <div class="flex items-center border-bottom">
+        <img class="flex-none mr1" src="https://i.imgur.com/fIbBCeu.png" alt="Go Miami" class="block mx-auto">
+      </div>
+      <div class="flex items-center border-bottom">
+        <img class="flex-none mr1" src="https://i.imgur.com/RlZfTWy.png" alt="Jobs" class="block mx-auto">
+      </div>
+      <div class="flex items-center">
+        <img class="flex-none mr1" src="https://i.imgur.com/XsGscZu.png" alt="Biden" class="block mx-auto">
+      </div>
+    </div>
   </body>
 </html>
